2008-11-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c:
	  Show the correct (wrt stacking) and up-to-date window title in
	  the thumbnails in switcher view.
	* TODO:
	  Added and removed switcher todos.

2008-11-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Show the last frame of a paused video in switcher view.

	* src/home/hd-task-navigator.c:
	  * pixbuf2texture(): Be more robust and check the input pixbuf.
	    Accept pixbufs with alpha channel.
	* src/home/hd-switcher.c:
	  Removed some debug prints.

2008-11-14  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/mb/hd-comp-mgr.c: initialise variable to avoid warning

2008-11-14  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-dummy-launcher.c
	* src/launcher/hd-launcher-utils.c
	* src/launcher/hd-task-launcher.c
	* src/home/hd-edit-menu.c
	* src/tidy/tidy-scroll-bar.c
	* src/util/hd-gtk-utils.c
	Named some clutter actors to ease debugging
	* src/home/hd-home.c
	Named some clutter actors to ease debugging
	Removed large background texture
	* src/home/hd-home-view.c
	Named some clutter actors to ease debugging
	Removed the solid background rectangle when an image is added
	Background Image added at the same position as previous image

2008-11-14  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.5

	Removed data/themes

2008-11-13  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-background-dialog.c (hd_background_dialog_init): Set
	window title. Fixes: NB#92490

2008-11-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-switcher.c:
	Don't add the same window to the switcher more than once,
	as it happens with unfullscreened windows.
	* src/home/hd-task-navigator.c:
	Comment clarification.
	* src/mb/hd-comp-mgr.c:
	hd_comp_mgr_close_client(): don't crash if it's erroneously
	passed NULL.

2008-11-12  Pere Laszlo  <ext-laszlo.pere@nokia.com>

	Make the operator name move out of the way of the status