@@ -1,5 +1,8 @@
 hildon-desktop (1:2.2.6-1~unreleased) unstable; urgency=low
 
+        * src/mb/hd-comp-mgr.c, src/mb/hd-theme.c: Patch from Laszlo Pere to
+        make stackable windows better supported. Fixes: NB#87040
+
         Adam:
 
         * src/home/hd-task-navigator.c:
