@@ -1,3 +1,8 @@
+2008-11-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	* src/mb/hd-comp-mgr.c, src/mb/hd-theme.c: Patch from Laszlo Pere to
+	make stackable windows better supported. Fixes: NB#87040
+
 2008-11-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
 	* src/home/hd-task-navigator.c:
